Fixed navbar alignment, added background to projects section

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
     text-align: center;
     height: 100%;
     width: 100%;
+    margin: 100px 0 0;
 }
 
 #intro-bio {
@@ -51,13 +52,14 @@ body {
     text-align: center;
     height: 100%;
     width: 100%;
+    margin: 0;
 }
 
 #intro-badges {
     grid-area: badges;
     display: flex;
     height: 100%;
-    max-width: 100%;
+    width: 100%;
     justify-content: center;
 }
 
@@ -83,23 +85,47 @@ body {
     display: flex;
     height: 50px;
     width: 100%;
-    justify-content: space-around;
-    align-items: center;
     background-color: black;
     border: 3px solid gray;
+}
+
+.nav-list {
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav-list > li > a {
+    color: white;
+    text-decoration: none;
+    display: inline-block;
 }
 
 #nav ul {
     list-style: none;
     display: flex;
-    justify-content: space-around;
-    align-content: center;
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     list-style-type: none;
 }
+
+.nav-list > li {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+
+.nav-item {
+    width: 100px;
+}
+
+.nav-text {
+    text-decoration: none;
+    font-size: 16px;
+    background: rgba(0,0,0,0.2);
+    display: inline-block;
+}    
 
 #nav li {
     position: relative;
@@ -129,6 +155,10 @@ body {
     transform: translateY(100px);
     will-change: opacity;
     display: none;
+}
+
+.dropdown li {
+    font-size: 20px;
 }
 
 .trigger-enter .dropdown {
@@ -170,8 +200,25 @@ body {
     min-width: 300px;
 }
 
+.follow li {
+    display: block;
+    border-bottom: 1px solid black;
+}
+
 .contact {
     min-width: 300px;
+}
+
+.contact li {
+    display: block;
+}
+
+.contact-link {
+    background: black;
+    display: block;
+    padding: 10px;
+    color: white;
+    margin-bottom: 10px;
 }
 
 /* Projects Page */
@@ -187,6 +234,8 @@ body {
     width: 100%;
     justify-content: center;
     align-content: space-around;
+    background-image: url(Assets/pexels-daniel-absi-952670.jpg);
+    background-size: cover;
 }
 
 .project {
